--- a/.github/workflows/pipline.yml
+++ b/.github/workflows/pipline.yml
@@ -35,9 +35,9 @@ jobs:
           java-version: '22'
           cache: 'gradle'
 
-      # Даём права на выполнение gradle
-      - name: Change wrapper permissions
-        run: chmod +x ./gradlew
+      # Настраивал gradle для работы
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
 
       #      - name: Run tests
       #        run: |
